# coding: utf-8
[bdist_wheel]
universal = 1

[metadata]
name = bugmon
version = 0.0.1
author = "Christian Holler, Jason Kratzer",
description = A python module for analyzing SpiderMonkey and Firefox bugs
license = MPL 2.0
url = https://github.com/MozillaSecurity/bugmon
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Software Development :: Testing

[options]
install_requires =
    ffpuppet
    fuzzfetch>=0.8.1
    lithium-reducer
    requests
    six
    autobisect @ git+ssh://github.com/MozillaSecurity/autobisect.git@bugmon-prep
    bugsy @ git+ssh://github.com/AutomatedTester/Bugsy.git@master
    prefpicker @ git+ssh://github.com/MozillaSecurity/prefpicker.git@master

packages =
    bugmon
include_package_data = True
python_requires = >=3
setup_requires = setuptools_scm >= 1.15.0

[options.entry_points]
console_scripts =
    bugmon = bugmon.bugmon:main